Contact Us Completed

--- a/index.html
+++ b/index.html
@@ -414,7 +414,9 @@
                       <div class="form-group">
                         <textarea class="form-control" rows="4" id="comment" placeholder="Enter Your Message"></textarea>
                       </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                      <div class="d-flex justify-content-around">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </div>
                   </form>
             </div>
         </div>
