--- a/index.html
+++ b/index.html
@@ -422,7 +422,27 @@
         </div>
     </div>
 </section>
+
 <!-- ****************************************Contact us Ends **************************** -->
+<!-- ***********************************Newsletter Start********************************** -->
+<section class="newsletter" id="newsletterid" >
+    <div class="container heading text-center ">
+        <h1 class="text-center font-weight-bold ">SUBSCRIBE TO OUR NEWSLETTER</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 offset-lg-2 col-12">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control news-input" placeholder="Your Email">
+                    <div class="input-group-append">
+                      <span class="input-group-text">Subscribe</span>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ***********************************Newsletter End********************************** -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js" integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q==" crossorigin="anonymous"></script>
@@ -437,8 +457,5 @@
         time:3000
     });
 </script>
-
-
 </body>
-
 </html>
